[package]
name = "dnadrive"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
itertools = "0.12.1"
bitvec = "1.0.1"
lz4 = "1.23.1"
thiserror = "1.0.61"
g2p = "1.0.1"
tempfile = "3.10.1"
bio = "2.0.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
